@@ -21,18 +21,13 @@ PORTING:
 
 IMPORTANT KERNEL NOTES:
   - You MUST have /dev/pts turned on.
-    "Block devices->Loopback device support"  
-    "Block devices->RAM disk support"
   - To boot genkernel properly, the kernel config must have
-    RAM disk support and Initial RAM disk support. You should
-    also set your "Default RAM disk size to 8192"
+    Initial RAM disk support.
 
 BOOTING A KERNEL WITH INITRD:
 
   GRUB:
-    real_root=	needs to point to your root partition
-    root=	needs to point to the ramdisk (should stay at /dev/ram0)
-    init=	needs to point to the linuxrc file to execute on the ramdisk
+    root=	needs to point to your root partition
     vga=	should be the resolution you want your screen. 0x317 is
     		1024x768 - 16bpp and you'll get a pretty splash if
     		configured properly
@@ -40,5 +35,5 @@ BOOTING A KERNEL WITH INITRD:
   GRUB EXAMPLE ENTRY:
     title=2.6.0 [ Genkernel ]
     root (hd0,0)
-    kernel (hd0,0)/boot/kernel-2.6.0-gentoo root=/dev/ram0 init=/linuxrc real_root=/dev/hda3 vga=0x317
+    kernel (hd0,0)/boot/kernel-2.6.0-gentoo root=/dev/hda3 vga=0x317
     initrd (hd0,0)/boot/initrd-2.6.0-gentoo
