@@ -5,6 +5,10 @@
 # Distributed under the GPL v2
 # $Id$
 
+  15 Oct 2012; Peter Hjalmarsson <xake@rymdraket.net> README,
+  doc/genkernel.8.txt, gen_bootloader.sh, genkernel:
+  Update the documentation to reflect current status re real_root/init.
+
   15 Oct 2012; Robin H. Johnson <robbat2@gentoo.org> genkernel:
   Bump to 3.4.44.2 with depmod corner cases by xake.
 
